--- a/cabal.project
+++ b/cabal.project
@@ -1,8 +1,12 @@
 packages: . ../smith ../json-tokenize ../array-chunks ../array-builder ../unpacked-maybe-text ../base62
 source-repository-package
   type: git
+  location: https://github.com/andrewthad/bytesmith
+  tag: 37b7c21e500ebccdd29545eec197856be662ce68
+source-repository-package
+  type: git
   location: https://github.com/andrewthad/haskell-ip
-  tag: 0f90d47ed945e1540e90d3dc38d263d5ac65368d
+  tag: fd3a72888b4dcf523b69eff9b72c358c5e2b201c
 source-repository-package
   type: git
   location: https://github.com/andrewthad/unpacked-maybe-numeric
