--- a/zeek-json.cabal
+++ b/zeek-json.cabal
@@ -22,7 +22,7 @@ library
     , base >=4.12 && <5
     , base62 >=0.1 && <0.2
     , byteslice >=0.1 && <0.2
-    , bytesmith >=0.1 && <0.2
+    , bytesmith >=0.2 && <0.3
     , bytestring >=0.10.8 && <0.11
     , chronos >=1.0.5 && <2
     , ip
@@ -30,6 +30,7 @@ library
     , primitive >=0.7 && <0.8
     , primitive-addr >=0.1 && <0.2
     , primitive-unlifted >=0.1.2 && <0.2
+    , scientific-notation >=0.1 && <0.2
     , smith
     , text-short >=0.1.3 && <0.2
     , unpacked-maybe
