--- a/zeek-json.cabal
+++ b/zeek-json.cabal
@@ -17,16 +17,16 @@ library
   exposed-modules:
     Zeek.Json
   build-depends:
-    , array-builder
-    , array-chunks
+    , array-builder >=0.1 && <0.2
+    , array-chunks >=0.1.1 && <0.2
     , base >=4.12 && <5
     , base62 >=0.1 && <0.2
-    , byteslice >=0.1 && <0.2
-    , bytesmith >=0.2 && <0.3
+    , byteslice >=0.1.3 && <0.2
+    , bytesmith >=0.3 && <0.4
     , bytestring >=0.10.8 && <0.11
     , chronos >=1.0.5 && <2
-    , ip
-    , json-tokenize
+    , ip >=1.6 && <1.7
+    , json-tokens >=0.1 && <0.2
     , primitive >=0.7 && <0.8
     , primitive-addr >=0.1 && <0.2
     , primitive-unlifted >=0.1.2 && <0.2
@@ -34,7 +34,7 @@ library
     , smith
     , text-short >=0.1.3 && <0.2
     , unpacked-maybe
-    , unpacked-maybe-numeric
+    , unpacked-maybe-numeric >=0.1.1 && <0.2
     , unpacked-maybe-text
     , wide-word >=0.1.0.8 && <0.2
   hs-source-dirs: src
@@ -56,7 +56,7 @@ test-suite test
     , bytestring
     , chronos
     , ip
-    , json-tokenize
+    , json-tokens
     , unpacked-maybe-numeric
     , neat-interpolation
     , primitive
